--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
         <meta charset="utf-8">
         <meta name="description" content="Material design admin">
         <meta name="keywords"
-              content="HTML,CSS,AngularJS,Angular,Angular 2,Angular 4,Angular 5,Angular 6,Angular 7,Material,Material 2">
+              content="HTML,CSS,AngularJS,Angular,Angular 2,Angular git branch4,Angular 5,Angular 6,Angular 7,Material,Material 2">
         <meta name="author" content="Withinpixels">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
