post service list in porgress

--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,10 @@
         <base href="/">
 
         <meta charset="utf-8">
-        <meta name="description" content="Material design admin">
+        <meta name="description" content="Met new friends doing what you like and make money at the same time">
         <meta name="keywords"
-              content="HTML,CSS,AngularJS,Angular,Angular 2,Angular git branch4,Angular 5,Angular 6,Angular 7,Material,Material 2">
+              content="in person services
+              ,met new friends, do what you like, make money, success, frinedship, services">
         <meta name="author" content="Withinpixels">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
